Add popup modal for messages
Added a modal for displaying popup messages.

--- a/index.html
+++ b/index.html
@@ -59,8 +59,14 @@
     Rules: exact guess → wins + 10 bonus; under-guess → points = actual wins; over-guess → points = wins − guess.<br>
     Total guesses for a set can be less or more than cards, but NOT equal.
   </div>
+  <div id="popupModal" class="modal hidden">
+  <div class="modal-content">
+    <div id="popupText" class="popup-text"></div>
+      <button id="popupOk" class="popup-btn">OK</button>
+    </div>
+  </div>
+
 
   <script src="script.js"></script>
 </body>
 </html>
-
